Release 2.43.0

Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.0 - May ??, 2011

    Simplified the compilation of grammar rules by removing the support for
    dealing with non-terminal scope and existence errors at the grammar rule
    level instead of the predicate level. Although this feature could be
    helpful when debugging grammar rules, it complicated the integration of
    Logtalk with Prolog-native development tools.

    Updated the Logtalk compiler in order to save the entity clause locations
    and make this information available to the back-end Prolog compilers.

    Updated the Logtalk compilers in order to avoid generating unnecessary
    internal catchall clauses for the predicate declaration and definition
    tables for dynamic entities.

    Updated the Logtalk compiler in order to preclude using multifile
    predicates for breaking object encapsulation. In addition, defining
    clauses for a multifile Entity::Functor/Arity without a corresponding
    multifile/1 directive will now result in a compilation error instead
    of simply a warning.

    When debugging messages specified in uses/2 directives, the message is now
    printed implicitly qualified as in the source code written by the user.

    Updated the SWI-Prolog config file in order to avoid preventing loading
    of a Logtalk source file when a Prolog file with the same name exists on
    the same lookup directory.

    Updated the SWI-Prolog integration files in order to hide the source code
    of the Logtalk (::)/2 and (<<)/2 built-in predicates from this compiler
    debugging tools.

    Updated the SWI-Prolog hooks file in order to support tracing Logtalk