@@ -336,6 +336,10 @@ Note that the scope of the <code>set_logtalk_flag/2</code> directive is local to
 			<dd>Enables the definition of prefix for all functors of Prolog code generated by the Logtalk compiler. The option value must be an atom; the default value is <code>'$'</code>. Specifying a code prefix provides a way to solve possible conflicts between Logtalk compiled code and other Prolog code. In addition, some Prolog compilers automatically hide predicates whose functor start with a specific prefix such as the character <code>$</code>.</dd>
 	</dl>
 	<dl>
+		<dt><code>optimize(Option)</code></dt>
+			<dd>Controls the compiler optimization. Possible option values are <code>on</code> (the usual default) and <code>off</code>.</dd>. Compiler optimizations include the removal of redundant calls to <code>true/0</code> from predicate clauses and removal of redundant unifications when compiling grammar rules. 
+	</dl>
+	<dl>
 		<dt><code>debug(Option)</code></dt>
 			<dd>Controls the compilation of source files in debug mode (the Logtalk built-in debugger can only be used with files compiled in this mode). Possible option values are <code>on</code> and <code>off</code> (the usual default).</dd>
 	</dl>
@@ -705,7 +709,7 @@ When objects or categories containing grammar rules are compiled in debug mode, 
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: February 9, 2011</span>
+		<span>Last updated on: April 17, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="installing.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="migration.html">next</a></span><br/>
