@@ -15,6 +15,13 @@ RELEASE NOTES
 
 2.43.0 - May ??, 2011
 
+    Added an "optimize" flag, whose default value is "on". This flag allows
+    the user to turn off existing optimizations for e.g. debugging tasks (the
+    currently implemented optimizations include the removal of redundant calls
+    to true/0 from the body of compiled predicate clauses and the removal of
+    redundant calls to (=)/2 from the body of clauses generated by the
+    expansion of grammar rules).
+
     Simplified the compilation of grammar rules by removing the support for
     dealing with non-terminal scope and existence errors at the grammar rule
     level instead of the predicate level. Although this feature could be
